# seismic_tomography_demo

./: README.md  __init__.py  app.py  pyproject.toml
seismotomography.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tomography/: __init__.py  geometry.py  grid.py  inversion.py  ray_tracing.py  synthetic.py
