[project]
name = "seismotomography"
version = "0.1.0"
description = "Учебный интерактив по сейсмотомографии со Streamlit и прямолучевой инверсией."
authors = [
    { name = "Educational Seismotomography Team" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25",
    "streamlit>=1.32",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "black>=23.9",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tomography"]
